apps/base/aiometadata/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aiometadata
  labels:
    app.kubernetes.io/name: aiometadata
    gateway.excloo.dev/private-access: "true"
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/warn: restricted
