apps/base/aiometadata/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: aiometadata
  namespace: aiometadata
  labels:
    app.kubernetes.io/name: aiometadata
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: networking
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - port: 3232
          protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: aiometadata
  policyTypes:
    - Ingress
