apps/base/aiometadata/resources.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aiometadata
  labels:
    app.kubernetes.io/name: aiometadata
    gateway.excloo.dev/private-access: "true"
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/warn: restricted
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: aiometadata
  namespace: aiometadata
  labels:
    app.kubernetes.io/name: aiometadata
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: networking
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - port: 3232
          protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: aiometadata
  policyTypes:
    - Ingress
